--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
     -->
     <title>React App</title>
     <script src="https://cdn.lordicon.com/lordicon.js"></script>
+    Illustration by <a href="https://icons8.com/illustrations/author/eEbrZFlkyZbD">Anna A</a> from <a href="https://icons8.com/illustrations">Ouch!</a>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
